<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/group_citas">
            <menu>
                <item
                    android:id="@+id/nav_agendar"
                    android:checkable="true"
                    android:icon="@drawable/menu_agendar"
                    android:title="@string/agendar_cita" />
                <item
                    android:id="@+id/nav_mis_citas"
                    android:checkable="true"
                    android:icon="@drawable/menu_cita"
                    android:title="@string/mis_citas" />
            </menu>
        </item>
        <item android:title="@string/group_conocenos_mas">
            <menu>
                <item
                    android:id="@+id/nav_tos"
                    android:checkable="true"
                    android:icon="@drawable/menu_terminos"
                    android:title="@string/tos_title" />
                <item
                    android:id="@+id/nav_privacidad"
                    android:checkable="true"
                    android:icon="@drawable/menu_politicas"
                    android:title="@string/politicas_de_privacidad" />
                <item
                    android:id="@+id/nav_web"
                    android:checkable="false"
                    android:icon="@drawable/mapa_web"
                    android:title="@string/ver_pagina_web" />
                <item
                    android:id="@+id/nav_share"
                    android:checkable="false"
                    android:icon="@drawable/menu_whatsapp"
                    android:title="@string/compartir" />
                <item
                    android:id="@+id/nav_comentarios"
                    android:checkable="true"
                    android:icon="@drawable/menu_comentarios"
                    android:title="@string/comentarios" />
                <item
                    android:id="@+id/nav_conexion"
                    android:checkable="false"
                    android:icon="@drawable/menu_conexion"
                    android:title="@string/condiciones_de_conexion" />
                <item
                    android:id="@+id/nav_map"
                    android:checkable="true"
                    android:icon="@drawable/menu_ubicacion"
                    android:title="@string/ubicacion_en_mapa" />
            </menu>
        </item>

        <item android:title="@string/group_configuracion">
            <menu>
                <item
                    android:id="@+id/nav_cuenta"
                    android:checkable="true"
                    android:icon="@drawable/menu_cuenta"
                    android:title="@string/mi_cuenta" />
                <item
                    android:id="@+id/nav_salir"
                    android:checkable="false"
                    android:icon="@drawable/menu_cerrar"
                    android:title="@string/salir" />
            </menu>
        </item>
    </group>

</menu>
